# Appraisal-System-Backend

./: .env.example  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
appraisal_lead_reccomendations/: repo.py
appraisals/: repo.py  router.py  schemas.py  service.py
assistant/: router.py  schemas.py  service.py
auth/: dependencies.py  router.py  schemas.py  service.py  utils.py
competencies/: repo.py  router.py  schemas.py  service.py
cycles/: repo.py  router.py  schemas.py  service.py
database/: __init__.py  connection.py
employee_lead_recommendations/: repo.py  router.py  schemas.py  service.py
exceptions/: __init__.py  handler.py
generate_summary/: repo.py  router.py  schemas.py  service.py
lead_assignments/: repo.py  router.py  schemas.py  service.py
lead_feedbacks/: repo.py  router.py  schemas.py  service.py
middleware/: __init__.py  auditor.py  context.py  listeners.py  logger.py
models/: __init__.py  appraisal.py  appraisal_lead_assignment.py  appraisal_lead_reccomendation.py  appraisal_summary.py  associations.py  audit.py  competencies.py  cycles.py  employee_lead_recommendation.py  entity.py  lead_feedback.py  self_appraisal.py  user.py
reports/: repo.py  router.py  schemas.py  service.py
self_appraisals/: repo.py  router.py  schemas.py  service.py
summaries/: repo.py  router.py  schemas.py  service.py
tests/: conftest.py  test_appraisals.py  test_audit.py  test_auth.py  test_cycles.py  test_users.py
users/: repo.py  router.py  schemas.py  service.py
(+3 files in other folders)
