[project]
name = "perfomance-appraisal-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.48.0",
    "bcrypt>=5.0.0",
    "python-jose[cryptography]>=3.5.0",
    "greenlet>=3.5.1",
    "python-multipart>=0.0.30",
    "pre-commit>=4.6.0",
    "openai>=2.44.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.46.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.22.1",
    "pytest-asyncio>=1.4.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
